[tool.poetry]
name = "dj-stripe"
version = "2.4.0dev"
description = "Django + Stripe made easy"
license = "MIT"
authors = [
    "Alexander Kavanaugh <alex@kavdev.io>",
    "Jerome Leclanche <jerome@leclan.ch>",
    "John Carter <john@therefromhere.org>",
]
readme = "README.md"
repository = "https://github.com/dj-stripe/dj-stripe"
documentation = "https://dj-stripe.readthedocs.io/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.2"
jsonfield = ">=3.0"
# avoid 2.36.0, see https://github.com/dj-stripe/dj-stripe/issues/991
stripe = ">=2.32.0,!=2.36.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
